--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "MichaelHu",
   "license": "ISC",
   "dependencies": {
+    "kcors": "^2.2.1",
     "koa": "^2.3.0",
     "koa-better-body": "^3.0.2",
-    "koa-better-router": "^2.1.1"
+    "koa-better-router": "^2.1.1",
+    "koa-mongo": "^0.7.0"
   }
 }
